@@ -1,2 +1,0 @@
-[ ] tests for consul support
-[ ] verify consul dns works or add dns support
